Fix: Center Aligned the ActionMenu and RuleStatusSwitch (#7816)
* Centre Aligned buttons

--- a/phytoplankton-console/src/pages/risk-levels/risk-factors/RiskFactorsTable/styles.module.less
+++ b/phytoplankton-console/src/pages/risk-levels/risk-factors/RiskFactorsTable/styles.module.less
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  min-height: 3rem;
 }
 
 .actionIconsContainer {
@@ -59,4 +60,11 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 12px;
+}
+
+.centeredRuleStatusSwitch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 3rem;
 }
